artifacts/hub/open-cluster-management-hub/cluster-manager-registration-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:

  labels:
    app: clustermanager-registration-controller
  name: clustermanager-registration-controller
  namespace: open-cluster-management-hub
spec:
  progressDeadlineSeconds: 600
  replicas: 1 # should be 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: clustermanager-registration-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: clustermanager-registration-controller
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - clustermanager-registration-controller
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - clustermanager-registration-controller
              topologyKey: kubernetes.io/hostname
            weight: 30
      containers:
      - args:
        - /registration
        - controller
        image: localhost:5000/open-cluster-management/registration:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: hub-registration-controller
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: cluster-manager-registration-controller-sa
      serviceAccountName: cluster-manager-registration-controller-sa
      terminationGracePeriodSeconds: 30
