artifacts/hub/open-cluster-management-hub/cluster-manager-work-webhook-list-template.yaml
apiVersion: v1
kind: List
items:

- apiVersion: v1
  kind: Secret
  metadata:
    namespace: open-cluster-management-hub
    name: work-webhook-serving-cert
  type: kubernetes.io/tls
  data:
    tls.crt: TLS_SERVING_CERT
    tls.key: TLS_SERVING_KEY


- apiVersion: v1
  kind: Service
  metadata:
    name: cluster-manager-work-webhook
    namespace: open-cluster-management-hub
  spec:
    clusterIP: 10.96.140.57
    ports:
    - port: 443
      protocol: TCP
      targetPort: 6443
    selector:
      app: cluster-manager-work-webhook
    sessionAffinity: None
    type: ClusterIP

- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    name: manifestworkvalidators.admission.work.open-cluster-management.io
  webhooks:
  - admissionReviewVersions:
    - v1beta1
    clientConfig:
      service:
        name: kubernetes
        namespace: default
        path: /apis/admission.work.open-cluster-management.io/v1/manifestworkvalidators
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: manifestworkvalidators.admission.work.open-cluster-management.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - work.open-cluster-management.io
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - manifestworks
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10

- apiVersion: apiregistration.k8s.io/v1
  kind: APIService
  metadata:
    name: v1.admission.work.open-cluster-management.io
  spec:
    caBundle: SERVICE_SERVING_CERT_CA
    group: admission.work.open-cluster-management.io
    groupPriorityMinimum: 10000
    service:
      name: cluster-manager-work-webhook
      namespace: open-cluster-management-hub
      port: 443
    version: v1
    versionPriority: 20

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: cluster-manager-work-webhook
    name: cluster-manager-work-webhook
    namespace: open-cluster-management-hub
  spec:
    progressDeadlineSeconds: 600
    replicas: 1 # should be 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: cluster-manager-work-webhook
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: cluster-manager-work-webhook
      spec:
        affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - cluster-manager-work-webhook
                topologyKey: failure-domain.beta.kubernetes.io/zone
              weight: 70
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - cluster-manager-work-webhook
                topologyKey: kubernetes.io/hostname
              weight: 30

        containers:
        - args:
          - /work
          - webhook
          - --secure-port=6443
          - --tls-cert-file=/serving-cert/tls.crt
          - --tls-private-key-file=/serving-cert/tls.key
          image: localhost:5000/open-cluster-management/work
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: cluster-manager-work-webhook-sa
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /serving-cert
            name: webhook-secret
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: cluster-manager-work-webhook-sa
        serviceAccountName: cluster-manager-work-webhook-sa
        terminationGracePeriodSeconds: 30
        volumes:
        - name: webhook-secret
          secret:
            defaultMode: 420
            secretName: work-webhook-serving-cert
